Fronted: Contexto do usuário e atualização dos dados do usuário.

--- a/frontend/src/components/header/header.module.css
+++ b/frontend/src/components/header/header.module.css
@@ -13,3 +13,15 @@
     align-items: center;
     height: 4rem;
 }
+
+.sairBtnContainer {
+    display: flex;
+    gap: 0 35px;
+    align-items: center;
+    justify-content: center;
+}
+
+.sairBtnContainer button {
+    padding: 0.2rem 1rem;
+    cursor: pointer;
+}
