--- a/frontend/src/components/perfil/perfil-usuario/perfil.module.css
+++ b/frontend/src/components/perfil/perfil-usuario/perfil.module.css
@@ -1,8 +1,9 @@
 .perfilInfo {
-    display: grid;
-    padding: 1rem 0.5rem;
-    align-content: space-around;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem 0.5rem;
+    font-size: 1.5rem;
+    justify-content: flex-start;
 }
 
 @media (max-width: 48rem)  {
