Frontend: CSS da página do usuário e editar usuário atualizado

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -9,6 +9,7 @@ body {
   --type-first: var(--type-first-roboto), Arial, sans-serif;
   --type-second: var(--type-second-spectral), Georgia;
   font-family: var(--type-first);
+  background: #efefef;
 }
 
 h1,
