--- a/frontend/src/app/conta/conta.module.css
+++ b/frontend/src/app/conta/conta.module.css
@@ -2,6 +2,9 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
+    background: #fff;
+    padding: 2rem;
+    width: 100%;
 }
 
 .contaInfo a {
