--- a/frontend/src/components/footer/footer.module.css
+++ b/frontend/src/components/footer/footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-    background: #eee;
+    background: #fff;
     padding: 3rem 1rem 0 1rem;
     height: 10rem;
     text-align: center;
